<resources>
    <string name="app_name">Swifey</string>
    <string name="check_in">Check In</string>
    <string name="meal_break">Meal</string>
    <string name="check_in_btn">Check In</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="enter_your_information">Enter your information</string>
    <string name="hint_email">Email</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_num_swipes">Number of Swipes</string>
    <string name="submit_btn">Submit</string>
    <string name="max_num_orders_hint">Maxium Number of Orders</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="search">Search</string>
    <string name="check_ins">Past Check In</string>
    <string name="place_your_order_tv">Please place your order:</string>
    <string name="review_order_btn_text">Review Order</string>
    <string name="order_review_title_txt">Please Review Your Order:</string>
    <string name="Follow">Follow</string>
    <string name="discount_code_hint">Discount Code</string>
    <string name="special_requests_hint">Special Requests</string>
    <string name="place_order_btn_txt">Place Order</string>
    <string name="validate_discount_btn_txt">Validate</string>
    <string name="LeFin">Le Fin</string>
</resources>
