<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context="com.jzheadley.swifey.ui.UserDetailsActivity">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/enter_your_information"
        android:textSize="20sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout

        android:id="@+id/first_name_text_input_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.design.widget.TextInputEditText
            android:hint="@string/hint_first_name"
            android:id="@+id/first_name"
            android:inputType="textCapWords"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/last_name_text_input_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.design.widget.TextInputEditText
            android:hint="@string/hint_last_name"
            android:id="@+id/last_name"
            android:inputType="textCapWords"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_text_input_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.design.widget.TextInputEditText
            android:hint="@string/hint_email"
            android:id="@+id/email"
            android:inputType="textCapWords"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/dob_text_input_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.design.widget.TextInputEditText
            android:clickable="true"
            android:editable="false"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:hint="@string/hint_dob"
            android:id="@+id/dob"
            android:inputType="date"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/num_swipes_text_input_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <android.support.design.widget.TextInputEditText
            android:hint="@string/hint_num_swipes"
            android:id="@+id/num_swipes"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black" />
    </android.support.design.widget.TextInputLayout>

    <com.lamudi.phonefield.PhoneInputLayout
        android:id="@+id/phone_input_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <Button
        android:id="@+id/submit_user_details_btn"
        android:layout_gravity="center_vertical"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:onClick="onClick"
        android:text="@string/submit_btn" />
</LinearLayout>
